--- a/email/email/src/main/resources/application.properties
+++ b/email/email/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8082
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/ms-email
+spring.datasource.url=jdbc:postgresql://localhost:5432/ms-email
 spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
+spring.rabbitmq.addresses=amqps://mfzetugy:UujtfBFhRLdpDEyzl_OCUF2aMV5b1IEA@prawn.rmq.cloudamqp.com/mfzetugy
