--- a/email/email/src/main/resources/application.properties
+++ b/email/email/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
 spring.rabbitmq.addresses=amqps://mfzetugy:UujtfBFhRLdpDEyzl_OCUF2aMV5b1IEA@prawn.rmq.cloudamqp.com/mfzetugy
+
+broker.queue.email.name=default.email
