--- a/email/email/src/main/resources/application.properties
+++ b/email/email/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.rabbitmq.addresses=amqps://mfzetugy:UujtfBFhRLdpDEyzl_OCUF2aMV5b1IEA@prawn.rmq.cloudamqp.com/mfzetugy
 
 broker.queue.email.name=default.email
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=YOU_EMAIL
+spring.mail.password=YOU_APP_PASSWORD
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
